fix: scroll horizontal issue.
The issue was that when scrolling in different types of tables, with
different header sizes and paginations, it would sometimes give a gap or
sometimes take the scrollbar below the table or even hide some rows
sometimes.

This was fixed by removing the table header as fixed position and
making it auto align to it's position and removing the header height
from the initial provided height

--- a/src/less/index.less
+++ b/src/less/index.less
@@ -64,13 +64,14 @@
         flex-direction: column;
         gap: 10px;
         justify-content: center;
+        background: red;
     }
 
     &-wrapper {
         width: 100%;
         overflow: hidden;
         border-radius: 8px;
-        background: red;
+        background: blue;
         border: 1px solid var(--color-table-border, #333)
     }
 
